added support for std and socket